fixed line wrapping issue

--- a/AppiOS/www/css/app.css
+++ b/AppiOS/www/css/app.css
@@ -62,3 +62,7 @@
 .ui-content {
 	padding-top: 15px;
 }
+
+.ui-li-desc {
+	white-space: normal !important;
+}
